dev-rust-api/cargo_errors.txt
   Compiling compute-cuda v0.1.0 (W:\Workspace\dev-rust-api\compute-cuda)
warning: unused import: `KeyData`
 --> compute-cuda\src\lib.rs:6:20
  |
6 | use slotmap::{Key, KeyData, SlotMap};
  |                    ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: unsafe attribute used without unsafe
  --> compute-cuda\src\mock.rs:60:3
   |
60 | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
60 | #[unsafe(no_mangle)]
   |   +++++++         +

error: unsafe attribute used without unsafe
  --> compute-cuda\src\mock.rs:72:3
   |
72 | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
72 | #[unsafe(no_mangle)]
   |   +++++++         +

error: unsafe attribute used without unsafe
  --> compute-cuda\src\mock.rs:86:3
   |
86 | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
86 | #[unsafe(no_mangle)]
   |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:113:3
    |
113 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
113 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:135:3
    |
135 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
135 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:146:3
    |
146 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
146 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:168:3
    |
168 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
168 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:179:3
    |
179 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
179 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:193:3
    |
193 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
193 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:199:3
    |
199 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
199 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:208:3
    |
208 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
208 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:216:3
    |
216 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
216 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:236:3
    |
236 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
236 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:255:3
    |
255 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
255 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:263:3
    |
263 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
263 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:276:3
    |
276 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
276 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:294:3
    |
294 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
294 | #[unsafe(no_mangle)]
    |   +++++++         +

error: unsafe attribute used without unsafe
   --> compute-cuda\src\mock.rs:308:3
    |
308 | #[no_mangle]
    |   ^^^^^^^^^ usage of unsafe attribute
    |
help: wrap the attribute in `unsafe(...)`
    |
308 | #[unsafe(no_mangle)]
    |   +++++++         +

error[E0308]: mismatched types
   --> compute-cuda\src\lib.rs:580:13
    |
580 |             total_spikes,
    |             ^^^^^^^^^^^^ expected `u32`, found `u64`
    |
help: you can convert a `u64` to a `u32` and panic if the converted value doesn't fit
    |
580 |             total_spikes: total_spikes.try_into().unwrap(),
    |             +++++++++++++             ++++++++++++++++++++

For more information about this error, try `rustc --explain E0308`.
warning: `compute-cuda` (lib) generated 1 warning
error: could not compile `compute-cuda` (lib) due to 19 previous errors; 1 warning emitted
